# arduous

./: .clang-format  .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml  ci.yml  latest.yml
cmake/: simavr.cmake
include/: sim_core_config.h  sim_core_decl.h
include/arduous/: arduous.h  atcore.h  speaker.h  ssd1306.h
include/fact/: factorial.h
include/libretro/: libretro.h
include/stdext/: map.h
src/: main.cpp  sim_fake_gdb.c  strsep.c
src/arduous/: arduous.cpp  atcore.cpp  ssd1306.cpp
src/fact/: factorial.cpp
src/libretro/: libretro.cpp
